--- a/apr-semestral.cabal
+++ b/apr-semestral.cabal
@@ -28,6 +28,7 @@ library
       Lex.Lexer
       Lex.Tokens
       Lib
+      Parse.AST
   other-modules:
       Paths_apr_semestral
   autogen-modules:
