feat: interpreter state

--- a/package.yaml
+++ b/package.yaml
@@ -22,6 +22,8 @@ description:         Please see the README on GitHub at <https://github.com/sopt
 dependencies:
 - base >= 4.7 && < 5
 - parsec >= 3.1 && < 4
+- mtl
+- containers
 
 ghc-options:
 - -Wall
