--- a/apr-semestral.cabal
+++ b/apr-semestral.cabal
@@ -25,6 +25,9 @@ source-repository head
 
 library
   exposed-modules:
+      Interpreter.Data
+      Interpreter.InterpretExpr
+      Interpreter.State
       Lex.Lexer
       Lex.Tokens
       Lib
@@ -41,6 +44,8 @@ library
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
+    , containers
+    , mtl
     , parsec >=3.1 && <4
   default-language: Haskell2010
 
@@ -56,6 +61,8 @@ executable apr-semestral-exe
   build-depends:
       apr-semestral
     , base >=4.7 && <5
+    , containers
+    , mtl
     , parsec >=3.1 && <4
   default-language: Haskell2010
 
@@ -75,6 +82,8 @@ test-suite apr-semestral-test
   build-depends:
       apr-semestral
     , base >=4.7 && <5
+    , containers
     , hspec >=2.11 && <3
+    , mtl
     , parsec >=3.1 && <4
   default-language: Haskell2010
