--- a/apr-semestral.cabal
+++ b/apr-semestral.cabal
@@ -73,6 +73,7 @@ test-suite apr-semestral-test
       DeclParserSpec
       ExprParserSpec
       InterpretExprSpec
+      InterpretStmtSpec
       StateSpec
       StmtParserSpec
       Paths_apr_semestral
