fix: allow skip the build docker job

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,6 +16,7 @@ build-docker:
   image: docker:latest
   rules:
     - when: manual
+  allow_failure: true
   services:
     - docker:dind
   variables:
