--- a/apr-semestral.cabal
+++ b/apr-semestral.cabal
@@ -31,6 +31,7 @@ library
       Interpreter.Data
       Interpreter.Interpret
       Interpreter.State
+      Lex.Comments
       Lex.Lexer
       Lex.Tokens
       Lib
