Typecheck without proper errors

--- a/apr-semestral.cabal
+++ b/apr-semestral.cabal
@@ -91,6 +91,7 @@ test-suite apr-semestral-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
+      ConstraintSolverSpec
       DeclParserSpec
       ExprParserSpec
       InterpretExprSpec
