--- a/apr-semestral.cabal
+++ b/apr-semestral.cabal
@@ -100,6 +100,7 @@ test-suite apr-semestral-test
       StateSpec
       StmtParserSpec
       TestUtils
+      TypecheckSpec
       Paths_apr_semestral
   autogen-modules:
       Paths_apr_semestral
