--- a/apr-semestral.cabal
+++ b/apr-semestral.cabal
@@ -98,6 +98,7 @@ test-suite apr-semestral-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
+      CfgSpec
       ConstraintSolverSpec
       DeclParserSpec
       ExprParserSpec
