const analysis kinda does something

--- a/apr-semestral.cabal
+++ b/apr-semestral.cabal
@@ -30,6 +30,7 @@ library
       Analysis.Cfg.Cfg
       Analysis.Dataflow.Const
       Analysis.Dataflow.Lattices
+      Analysis.Dataflow.Utils
       Analysis.Error
       Analysis.Semantics
       Analysis.Typecheck.ConstraintGenerator
