--- a/apr-semestral.cabal
+++ b/apr-semestral.cabal
@@ -30,7 +30,7 @@ library
       Analysis.Cfg.Cfg
       Analysis.Dataflow.Analysis
       Analysis.Dataflow.Const
-      Analysis.Dataflow.Lattices
+      Analysis.Dataflow.Sign
       Analysis.Dataflow.Utils
       Analysis.Error
       Analysis.Semantics
