feat: compilation scaffolding

--- a/apr-semestral.cabal
+++ b/apr-semestral.cabal
@@ -41,6 +41,7 @@ library
       Analysis.Typecheck.ConstraintSolver
       Analysis.Typecheck.Type
       Analysis.Typecheck.Typecheck
+      Compile.Compile
       Error
       Interpreter.Data
       Interpreter.Interpret
