--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "tests"]
 	path = tests
 	url = git@gitlab.fit.cvut.cz:NI-APR/B251/tests.git
+[submodule "vm"]
+	path = vm
+	url = git@gitlab.fit.cvut.cz:storcond-thesis/vm.git
