feat: NOP elimination

--- a/apr-semestral.cabal
+++ b/apr-semestral.cabal
@@ -1,6 +1,6 @@
 cabal-version: 2.2
 
--- This file has been generated from package.yaml by hpack version 0.37.0.
+-- This file has been generated from package.yaml by hpack version 0.38.1.
 --
 -- see: https://github.com/sol/hpack
 
@@ -47,6 +47,7 @@ library
       Compile.Optimization.AST.DeadStoreElimination
       Compile.Optimization.AST.Optimize
       Compile.Optimization.IR.NopRemoval
+      Compile.Optimization.IR.Optimize
       Error
       Interpreter.Data
       Interpreter.Interpret
